support mysql master-slave-replicate

--- a/release/x86_64/linux/conf.yaml
+++ b/release/x86_64/linux/conf.yaml
@@ -1,8 +1,14 @@
 #数据库配置
 dbInfo:
   ip: "10.11.17.202"
-  port: 3306
+  port: 13306
   dbName: "ktoy"
   dbUserName: "root"
   dbPassword: "zh08311534"
-  expiredTime: 30
+separation: true
+slavedb:
+  - ip: "10.11.17.202"
+    port: 13307
+    dbName: "ktoy"
+    dbUserName: "root"
+    dbPassword: "zh08311534"
